tests/typechecker/pass/023-rec-fun-nested.hyg
rec fun f(x: int): int = {if x = 0 then 0 else x + f(x - 1)};
rec fun g(y: float): float = {
    let n: int = f(5);
    42.0f + y
};
f: (int) -> int;
g: (float) -> float
