tests/typechecker/fail/026-do-while-typed-var.hyg
//Do while returns unitValue
let mutable x = 0;
let y: int = do {
   x <- x +1;
   println("hello")
} while (x < 5);
assert(y = 5)